Followup: Handle new `Sort.unsorted()` sorting strategy
Spring-Data no longer passes in `null` if no sorting order is given by the caller but uses `Sort.unsorted()` which incorrectly causes an Exception.
This should also solve #99

Followup to 8c3e139246c4a9617b0d7c22b5a170fb2d42f261

Also getting rid of some JDK9 deprecated warnings on the JDK classes - as those methods exist in JDK8 already.